web/system/log/log-2017-08-11
[2017-08-11 15:26:00.421] [ERROR] dateFileLog - ReferenceError: DeviceEntityOID is not defined
    at simWarnData (C:\NB\tm.FGEMS\bizServer\biz\auto\AlarmMeterLower.js:52:45)
    at triggerData (C:\NB\tm.FGEMS\bizServer\biz\auto\AlarmMeterLower.js:20:5)
    at Job.job (C:\NB\tm.FGEMS\bizServer\biz\auto\AlarmMeterLower.js:15:9)
    at Job.invoke (C:\NB\node_modules\node-schedule\lib\schedule.js:175:10)
    at Timeout._onTimeout (C:\NB\node_modules\node-schedule\lib\schedule.js:456:11)
    at ontimeout (timers.js:380:14)
    at tryOnTimeout (timers.js:244:5)
    at Timer.listOnTimeout (timers.js:214:5)
[2017-08-11 17:20:07.564] [ERROR] dateFileLog - C:\NB\tm.FGEMS\bizServer\biz\auto\AlarmMeterAmp.js:150
        },
         ^
SyntaxError: Unexpected token ,
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.foundFile (C:\NB\yujiang.Foil.Node\src\yjApp.js:192:7)
[2017-08-11 17:20:58.158] [ERROR] dateFileLog - C:\NB\tm.FGEMS\bizServer\biz\auto\AlarmMeterAmp.js:151
        error:function(err){
                      ^
SyntaxError: Unexpected token (
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.foundFile (C:\NB\yujiang.Foil.Node\src\yjApp.js:192:7)
[2017-08-11 17:29:50.546] [ERROR] dateFileLog - C:\NB\tm.FGEMS\bizServer\biz\auto\AlarmMeterAmp.js:119
                   error:function(err){
                   ^^^^^
SyntaxError: missing ) after argument list
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.foundFile (C:\NB\yujiang.Foil.Node\src\yjApp.js:192:7)
[2017-08-11 17:30:38.275] [ERROR] dateFileLog - C:\NB\tm.FGEMS\bizServer\biz\auto\AlarmMeterAmp.js:117
                     },
                      ^
SyntaxError: Unexpected token ,
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.foundFile (C:\NB\yujiang.Foil.Node\src\yjApp.js:192:7)
